--- a/assets/main.css
+++ b/assets/main.css
@@ -1,7 +1,7 @@
 
 body {
 	font-family: Calibri, Noto Sans, Sans;
-	font-size: 1em;
+	font-size: 14px;
 	background-color: #007557;
 	margin: 0;
 	background: rgb(0,75,40);
@@ -48,7 +48,7 @@ li {
 	text-decoration: none;
 	color: black;
 	font-weight: bold;
-	padding: 10px 10px 10px 10px;
+	padding: 5px 5px 5px 5px;
 	display: inline-block;
 }
 
